flavor in embed descriptions

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://lancer.kuenaimaku.com/">
   <meta property="og:title" content="Wallflower Mission Briefing">
-  <meta property="og:description" content="WALLFLOWER | MISSION BRIEFING">
+  <meta property="og:description" content="LANDMARK COLONIAL MISSION MANAGEMENT">
   <meta property="og:image" content="/icons/company-icon.svg">
   <title>WALLFLOWER | MISSION BRIEF</title>
 </head>
@@ -30,7 +30,7 @@
       scaleMobile: 1.00,
       color: 0xc22026,
       color2: 0xc22026,
-      size: 1.20,
+      size: 1,
       backgroundColor: 0x202020
     })
   </script>
